refactor test using `var` instead of type